--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/pennlogo"
+        android:icon="@drawable/pennlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/pennlogo"
+        android:roundIcon="@drawable/pennlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <!-- API keys from Google Cloud Platform -->
